--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
         - #BLOG
       -->
 
-      <section class="section blog" id="blog" aria-label="blog">
+      <!-- <section class="section blog" id="blog" aria-label="blog">
         <div class="container">
 
           <p class="section-subtitle text-center has-before">Blog Post</p>
@@ -712,7 +712,7 @@
           </ul>
 
         </div>
-      </section>
+      </section> -->
 
     </article>
   </main>
