--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <ul class="social-list">
 
               <li>
-                <a href="https://www.facebook.com/TechMansionng/" class="social-link" style="--color: hsl(241, 77%, 63%);">
+                <a href="https://www.facebook.com/TechMansionng/" class="social-link" target="_blank" style="--color: hsl(241, 77%, 63%);">
                   <ion-icon name="logo-facebook"></ion-icon>
 
                   <span class="span">Facebook</span>
@@ -136,7 +136,7 @@
               </li>
 
               <li>
-                <a href="https://www.youtube.com/channel/UCjczcDuRKNOOUtRpvoArg-w" class="social-link" style="--color: hsl(0, 100%, 50%);">
+                <a href="https://www.youtube.com/channel/UCjczcDuRKNOOUtRpvoArg-w" target="_blank" class="social-link" style="--color: hsl(0, 100%, 50%);">
                   <ion-icon name="logo-youtube"></ion-icon>
 
                   <span class="span">Youtube</span>
@@ -144,7 +144,7 @@
               </li>
 
               <li>
-                <a href="https://twitter.com/TechMansion" class="social-link" style="--color: hsl(203, 89%, 53%);">
+                <a href="https://twitter.com/TechMansion" target="_blank" class="social-link" style="--color: hsl(203, 89%, 53%);">
                   <ion-icon name="logo-twitter"></ion-icon>
 
                   <span class="span">Twitter</span>
