--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <nav class="navbar" data-navbar>
 
         <div class="wrapper">
-          <a href="#" class="logo">Pixology</a>
+          <a href="#" class="logo">Tech Mansion</a>
 
           <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
             <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
@@ -401,7 +401,7 @@
           <p class="section-subtitle has-before text-center">Projects</p>
 
           <h2 class="h2 section-title text-center">
-            Pixology complete <span class="has-before">project</span>
+            Tech Mansion complete <span class="has-before">project</span>
           </h2>
 
           <ul class="filter-list">
@@ -612,7 +612,7 @@
                   </h3>
 
                   <p class="card-text">
-                    At Pixology we specialize in designing, building, shipping and scaling beautifu. At Pixology we
+                    At Tech Mansion we specialize in designing, building, shipping and scaling beautifu. At Tech Mansion we
                     specialize in designing,
                     building, shipping and scaling beautiful.
                   </p>
@@ -732,7 +732,7 @@
 
         <div class="footer-brand">
 
-          <p class="footer-list-title">About Pixology</p>
+          <p class="footer-list-title">About Tech Mansion</p>
 
           <p class="footer-text">
             A new way to make the payments easy, reliable and 100% secure. claritatem itamconse quat. Exerci tationulla
@@ -933,7 +933,7 @@
       <div class="footer-bottom">
 
         <p class="copyright">
-          &copy; 2022 Pixology. All Rights Reserved by codewithsadee
+          &copy; 2024 Tech Mansion. All Rights Reserved by codewithsadee
         </p>
 
         <ul class="footer-bottom-list">
