--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@
       <div class="footer-bottom">
 
         <p class="copyright">
-          &copy; 2024 Tech Mansion. All Rights Reserved by codewithsadee
+          &copy; <script>document.write(new Date().getFullYear())</script> Tech Mansion. All rights reserved.
         </p>
 
         <ul class="footer-bottom-list">
