--- a/index.html
+++ b/index.html
@@ -126,13 +126,7 @@
             </p>
 
             <div class="wrapper">
-              <a href="#feature" class="btn btn-primary has-before has-after">How It Works</a>
-
-              <button class="hero-btn" aria-label="pixology promo">
-                <ion-icon name="play-outline" aria-hidden="true"></ion-icon>
-
-                <span class="span">Behind the scenes</span>
-              </button>
+              <a href="./letstalk.html" class="button primary">Get a Quote</a>
             </div>
 
             <ul class="social-list">
