--- a/index.html
+++ b/index.html
@@ -126,7 +126,10 @@
             </p>
 
             <div class="wrapper">
-              <a href="./letstalk.html" class="btn btn-primary has-before has-after">Get a Quote</a>
+              <a href="./letstalk.html" class="btn btn-primary">
+                  <span class="icon icon-quote"></span>
+                  Get a Quote
+              </a>
             </div>
 
             <ul class="social-list">
