--- a/index.html
+++ b/index.html
@@ -126,10 +126,13 @@
             </p>
 
             <div class="wrapper">
-              <a href="./letstalk.html" class="btn btn-primary">
-                  <span class="icon icon-quote"></span>
-                  Get a Quote
-              </a>
+              <a href="#feature" class="btn btn-primary has-before has-after">How It Works</a>
+
+              <button class="hero-btn" aria-label="pixology promo">
+                <ion-icon name="play-outline" aria-hidden="true"></ion-icon>
+
+                <span class="span">Behind the scenes</span>
+              </button>
             </div>
 
             <ul class="social-list">
