--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
             </p>
 
             <div class="wrapper">
-              <a href="#feature" class="btn btn-primary has-before has-after">How It Works</a>
+              <a href="#feature" class="btn btn-primary has-before has-after">Get a Quote</a>
 
               <button class="hero-btn" aria-label="pixology promo">
                 <ion-icon name="play-outline" aria-hidden="true"></ion-icon>
 
-                <span class="span">Behind the scenes</span>
+                <span class="span">Portfolio</span>
               </button>
             </div>
 
