--- a/index.html
+++ b/index.html
@@ -122,18 +122,18 @@
             </h1>
 
             <p class="hero-text">
-              At Tech Mansion, we speak website –  so let us translate your vision into a digital space that truly works for you.
+              Tech Mansion speaks website. Let's translate your vision into a powerful digital experience.
             </p>
+            
 
             <div class="wrapper">
-              <a href="#feature" class="btn btn-primary has-before has-after">Get a Quote</a>
-
-              <button class="hero-btn" aria-label="pixology promo">
+              <a href="./letstalk.html" class="btn btn-primary">Get a Quote</a>
+              <button class="hero-btn">
                 <ion-icon name="play-outline" aria-hidden="true"></ion-icon>
-
-                <span class="span">Portfolio</span>
+                <span class="span">Watch Portfolio</span>
               </button>
             </div>
+            
 
             <ul class="social-list">
 
