--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
     <p class="section-subtitle has-before text-center">Our Services</p>
 
-    <h2 class="h2 section-title text-center">Managing your business with our <span class="has-before">best service</span></h2>
+    <h2 class="h2 section-title text-center">Elevate your online presence with our <span class="has-before">expertise</span></h2>
 
     <ul class="grid-list">
 
@@ -197,7 +197,7 @@
           </div>
 
           <h3 class="h3">
-            <a href="#" class="card-title">Product Management</a>
+            <a href="#" class="card-title">Website Development</a>
           </h3>
 
         </div>
@@ -211,7 +211,7 @@
           </div>
 
           <h3 class="h3">
-            <a href="#" class="card-title">Web & Mobile Development</a>
+            <a href="#" class="card-title">Mobile App Development</a>
           </h3>
 
         </div>
@@ -225,7 +225,7 @@
           </div>
 
           <h3 class="h3">
-            <a href="#" class="card-title">Fast Customer Support</a>
+            <a href="#" class="card-title">UI/UX Design</a>
           </h3>
 
         </div>
@@ -239,7 +239,7 @@
           </div>
 
           <h3 class="h3">
-            <a href="#" class="card-title">Human Resources</a>
+            <a href="#" class="card-title">E-commerce Solutions</a>
           </h3>
 
         </div>
@@ -253,7 +253,7 @@
           </div>
 
           <h3 class="h3">
-            <a href="#" class="card-title">Design and Creatives</a>
+            <a href="#" class="card-title">SEO Optimization</a>
           </h3>
 
         </div>
@@ -267,7 +267,7 @@
           </div>
 
           <h3 class="h3">
-            <a href="#" class="card-title">Marketing and Communication</a>
+            <a href="#" class="card-title">Content Management Systems</a>
           </h3>
 
         </div>
@@ -281,18 +281,24 @@
           </div>
 
           <h3 class="h3">
-            <a href="#" class="card-title">Business Development</a>
+            <a href="#" class="card-title">Website Maintenance</a>
           </h3>
 
         </div>
       </li>
 
       <li>
-        <a href="#" class="link-card" style="--color: 203, 97%, 75%">
-          <span class="span">04 More Services</span>
+        <div class="service-card" style="--color: 203, 97%, 75%">
 
-          <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
-        </a>
+          <div class="card-icon">
+            <img src="./assets/images/service-icon-8.png" width="30" height="30" loading="lazy" alt="service icon">
+          </div>
+
+          <h3 class="h3">
+            <a href="#" class="card-title">Digital Marketing</a>
+          </h3>
+
+        </div>
       </li>
 
     </ul>
