--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <div class="service-card" style="--color: 174, 77%, 50%">
 
           <div class="card-icon">
-            <img src="./assets/images/web-development-icon.png" width="30" height="30" loading="lazy" alt="service icon">
+            <i class="fas fa-code"></i>
           </div>
 
           <h3 class="h3">
@@ -207,7 +207,7 @@
         <div class="service-card" style="--color: 267, 76%, 57%">
 
           <div class="card-icon">
-            <img src="./assets/images/mobile-development-icon.png" width="30" height="30" loading="lazy" alt="service icon">
+            <i class="fas fa-mobile-alt"></i>
           </div>
 
           <h3 class="h3">
@@ -221,7 +221,7 @@
         <div class="service-card" style="--color: 17, 100%, 68%">
 
           <div class="card-icon">
-            <img src="./assets/images/ui-ux-design-icon.png" width="30" height="30" loading="lazy" alt="service icon">
+            <i class="fas fa-paint-brush"></i>
           </div>
 
           <h3 class="h3">
@@ -235,7 +235,7 @@
         <div class="service-card" style="--color: 343, 98%, 60%">
 
           <div class="card-icon">
-            <img src="./assets/images/ecommerce-icon.png" width="30" height="30" loading="lazy" alt="service icon">
+            <i class="fas fa-shopping-cart"></i>
           </div>
 
           <h3 class="h3">
@@ -249,7 +249,7 @@
         <div class="service-card" style="--color: 210, 100%, 53%">
 
           <div class="card-icon">
-            <img src="./assets/images/seo-icon.png" width="30" height="30" loading="lazy" alt="service icon">
+            <i class="fas fa-chart-line"></i>
           </div>
 
           <h3 class="h3">
@@ -263,7 +263,7 @@
         <div class="service-card" style="--color: 157, 89%, 44%">
 
           <div class="card-icon">
-            <img src="./assets/images/cms-icon.png" width="30" height="30" loading="lazy" alt="service icon">
+            <i class="fas fa-cogs"></i>
           </div>
 
           <h3 class="h3">
@@ -277,7 +277,7 @@
         <div class="service-card" style="--color: 52, 98%, 50%">
 
           <div class="card-icon">
-            <img src="./assets/images/maintenance-icon.png" width="30" height="30" loading="lazy" alt="service icon">
+            <i class="fas fa-tools"></i>
           </div>
 
           <h3 class="h3">
@@ -291,7 +291,7 @@
         <div class="service-card" style="--color: 203, 97%, 75%">
 
           <div class="card-icon">
-            <img src="./assets/images/digital-marketing-icon.png" width="30" height="30" loading="lazy" alt="service icon">
+            <i class="fas fa-bullhorn"></i>
           </div>
 
           <h3 class="h3">
