--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     - preload images
   -->
   <link rel="preload" as="image" href="./assets/images/hero-banner.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 </head>
 
