--- a/index.html
+++ b/index.html
@@ -325,10 +325,10 @@
 
           <div class="feature-content">
 
-            <p class="section-subtitle has-before">Why Choose us</p>
+            <p class="section-subtitle has-before">Why Choose Us</p>
 
             <h2 class="h2 section-title">
-              Building Success Without Breaking the <span class="has-before">Bank</span>
+              Unlock Success Without Breaking the <span class="has-before">Bank</span>
             </h2>
 
             <ul class="feature-list">
@@ -341,10 +341,10 @@
                   </div>
 
                   <div>
-                    <h3 class="h3 card-title">Vision to Reality, Fast</h3>
+                    <h3 class="h3 card-title">Turning Vision into Reality, Rapidly</h3>
 
                     <p class="card-text">
-                      Our streamlined process delivers beautiful websites quickly, minimizing disruption to your business.
+                      Our streamlined process swiftly delivers stunning websites, minimizing disruption to your business.
                     </p>
                   </div>
 
@@ -362,9 +362,7 @@
                     <h3 class="h3 card-title">Dedicated Team, 24/7 Support</h3>
 
                     <p class="card-text">
-                      You'll have a team of experts by your side, always available to address any questions or concerns.
-
-
+                      Our dedicated experts are available round the clock to address all your queries and concerns.
                     </p>
                   </div>
 
@@ -379,10 +377,10 @@
                   </div>
 
                   <div>
-                    <h3 class="h3 card-title">Beautiful Websites that Convert</h3>
+                    <h3 class="h3 card-title">Creating Beautiful Websites that Convert</h3>
 
                     <p class="card-text">
-                      We craft user-friendly experiences designed to achieve your online goals.
+                      We design intuitive experiences aimed at achieving your online objectives effectively.
                     </p>
                   </div>
 
@@ -395,6 +393,7 @@
 
         </div>
       </section>
+
 
 
 
