--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                   <div class="card-icon" style="--color: 174, 77%, 50%">
                     <ion-icon name="rocket-sharp" aria-hidden="true"></ion-icon>
                   </div>
-                  <h3 class="h3 card-title">Turning Vision into Reality, Rapidly</h3>
+                  <h3 class="h3 card-title">Rapid Transformation</h3>
                   <p class="card-text">
                     Our streamlined process swiftly delivers stunning websites, minimizing disruption to your business.
                   </p>
@@ -349,7 +349,7 @@
                   <div class="card-icon" style="--color: 241, 77%, 63%;">
                     <ion-icon name="people-sharp" aria-hidden="true"></ion-icon>
                   </div>
-                  <h3 class="h3 card-title">Dedicated Team, 24/7 Support</h3>
+                  <h3 class="h3 card-title">Dedicated Support</h3>
                   <p class="card-text">
                     Our dedicated experts are available round the clock to address all your queries and concerns.
                   </p>
@@ -361,7 +361,7 @@
                   <div class="card-icon" style="--color: 343, 98%, 60%;">
                     <ion-icon name="cog-sharp" aria-hidden="true"></ion-icon>
                   </div>
-                  <h3 class="h3 card-title">Creating Beautiful Websites that Convert</h3>
+                  <h3 class="h3 card-title">Effective Solutions</h3>
                   <p class="card-text">
                     We design intuitive experiences aimed at achieving your online objectives effectively.
                   </p>
