--- a/index.html
+++ b/index.html
@@ -325,49 +325,69 @@
 
           <div class="feature-content">
 
-            <p class="section-subtitle has-before text-center">Why Choose Us</p>
+            <p class="section-subtitle has-before">Why Choose Us</p>
 
-            <h2 class="h2 section-title text-center">
+            <h2 class="h2 section-title">
               Unlock Success Without Breaking the <span class="has-before">Bank</span>
             </h2>
 
-            <div class="row justify-content-center">
-              <div class="col-lg-4 col-md-6">
-                <div class="feature-card text-center">
+            <ul class="feature-list">
+
+              <li>
+                <div class="feature-card">
+
                   <div class="card-icon" style="--color: 174, 77%, 50%">
                     <ion-icon name="rocket-sharp" aria-hidden="true"></ion-icon>
                   </div>
-                  <h3 class="h3 card-title">Rapid Transformation</h3>
-                  <p class="card-text">
-                    Our streamlined process swiftly delivers stunning websites, minimizing disruption to your business.
-                  </p>
-                </div>
-              </div>
 
-              <div class="col-lg-4 col-md-6">
-                <div class="feature-card text-center">
+                  <div>
+                    <h3 class="h3 card-title">Turning Vision into Reality, Rapidly</h3>
+
+                    <p class="card-text">
+                      Our streamlined process swiftly delivers stunning websites, minimizing disruption to your business.
+                    </p>
+                  </div>
+
+                </div>
+              </li>
+
+              <li>
+                <div class="feature-card">
+
                   <div class="card-icon" style="--color: 241, 77%, 63%;">
                     <ion-icon name="people-sharp" aria-hidden="true"></ion-icon>
                   </div>
-                  <h3 class="h3 card-title">Dedicated Support</h3>
-                  <p class="card-text">
-                    Our dedicated experts are available round the clock to address all your queries and concerns.
-                  </p>
-                </div>
-              </div>
 
-              <div class="col-lg-4 col-md-6">
-                <div class="feature-card text-center">
+                  <div>
+                    <h3 class="h3 card-title">Dedicated Team, 24/7 Support</h3>
+
+                    <p class="card-text">
+                      Our dedicated experts are available round the clock to address all your queries and concerns.
+                    </p>
+                  </div>
+
+                </div>
+              </li>
+
+              <li>
+                <div class="feature-card">
+
                   <div class="card-icon" style="--color: 343, 98%, 60%;">
                     <ion-icon name="cog-sharp" aria-hidden="true"></ion-icon>
                   </div>
-                  <h3 class="h3 card-title">Effective Solutions</h3>
-                  <p class="card-text">
-                    We design intuitive experiences aimed at achieving your online objectives effectively.
-                  </p>
+
+                  <div>
+                    <h3 class="h3 card-title">Creating Beautiful Websites that Convert</h3>
+
+                    <p class="card-text">
+                      We design intuitive experiences aimed at achieving your online objectives effectively.
+                    </p>
+                  </div>
+
                 </div>
-              </div>
-            </div>
+              </li>
+
+            </ul>
 
           </div>
 
