--- a/index.html
+++ b/index.html
@@ -406,13 +406,13 @@
       <section class="section project" id="project" aria-label="project">
         <div class="container">
 
-          <p class="section-subtitle has-before text-center">Projects</p>
+          <p class="section-subtitle has-before text-center">Our Projects</p>
 
           <h2 class="h2 section-title text-center">
-            Tech Mansion complete <span class="has-before">project</span>
+            Explore Tech Mansion's <span class="has-before">Portfolio</span>
           </h2>
 
-          <ul class="filter-list">
+          <ul class="filter-list text-center">
 
             <li>
               <button class="filter-btn active" data-filter-btn>Website</button>
@@ -427,7 +427,7 @@
             </li>
 
             <li>
-              <button class="filter-btn" data-filter-btn>Landing Page</button>
+              <button class="filter-btn" data-filter-btn>Graphic Design</button>
             </li>
 
             <li>
@@ -437,7 +437,7 @@
           </ul>
 
           <ul class="grid-list">
-
+            
             <li>
               <div class="project-card">
 
@@ -448,7 +448,7 @@
 
                 <div class="card-content">
                   <h3 class="h3">
-                    <a href="#" class="card-title">Book art design</a>
+                    <a href="#" class="card-title">Book Art Design</a>
                   </h3>
 
                   <a href="#" class="card-tag">Branding</a>
@@ -480,13 +480,13 @@
               <div class="project-card">
 
                 <figure class="card-banner img-holder" style="--width: 416; --height: 429;">
-                  <img src="./assets/images/project-3.jpg" width="416" height="429" loading="lazy" alt="3d Digital Art"
+                  <img src="./assets/images/project-3.jpg" width="416" height="429" loading="lazy" alt="3D Digital Art"
                     class="img-cover">
                 </figure>
 
                 <div class="card-content">
                   <h3 class="h3">
-                    <a href="#" class="card-title">3d Digital Art</a>
+                    <a href="#" class="card-title">3D Digital Art</a>
                   </h3>
 
                   <a href="#" class="card-tag">Design</a>
@@ -537,6 +537,7 @@
 
         </div>
       </section>
+
 
 
 
