--- a/index.html
+++ b/index.html
@@ -406,52 +406,28 @@
       <section class="section project" id="project" aria-label="project">
         <div class="container">
 
-          <p class="section-subtitle has-before text-center">Our Projects</p>
+          <p class="section-subtitle has-before text-center">Our Portfolio</p>
 
           <h2 class="h2 section-title text-center">
-            Explore Tech Mansion's <span class="has-before">Portfolio</span>
+            Explore Our Diverse Range of <span class="has-before">Projects</span>
           </h2>
-
-          <ul class="filter-list text-center">
-
-            <li>
-              <button class="filter-btn active" data-filter-btn>Website</button>
-            </li>
-
-            <li>
-              <button class="filter-btn" data-filter-btn>Landing Page</button>
-            </li>
-
-            <li>
-              <button class="filter-btn" data-filter-btn>iOS App</button>
-            </li>
-
-            <li>
-              <button class="filter-btn" data-filter-btn>Graphic Design</button>
-            </li>
-
-            <li>
-              <button class="filter-btn" data-filter-btn>Branding Design</button>
-            </li>
-
-          </ul>
 
           <ul class="grid-list">
             
             <li>
               <div class="project-card">
 
-                <figure class="card-banner img-holder" style="--width: 835; --height: 429;">
-                  <img src="./assets/images/project-1.jpg" width="835" height="429" loading="lazy" alt="Book art design"
+                <figure class="card-banner img-holder" style="--width: 416; --height: 429;">
+                  <img src="./assets/images/techmansion-tech.jpg" width="416" height="429" loading="lazy" alt="Tech Mansion Website"
                     class="img-cover">
                 </figure>
 
                 <div class="card-content">
                   <h3 class="h3">
-                    <a href="#" class="card-title">Book Art Design</a>
+                    <a href="https://techmansion.tech" target="_blank" class="card-title">Tech Mansion Website</a>
                   </h3>
 
-                  <a href="#" class="card-tag">Branding</a>
+                  <a href="https://techmansion.tech" target="_blank" class="card-tag">Web Development</a>
                 </div>
 
               </div>
@@ -461,16 +437,16 @@
               <div class="project-card">
 
                 <figure class="card-banner img-holder" style="--width: 416; --height: 429;">
-                  <img src="./assets/images/project-2.jpg" width="416" height="429" loading="lazy" alt="Graphic Design"
+                  <img src="./assets/images/anikeolaschools-com.jpg" width="416" height="429" loading="lazy" alt="Anikeola Schools Website"
                     class="img-cover">
                 </figure>
 
                 <div class="card-content">
                   <h3 class="h3">
-                    <a href="#" class="card-title">Graphic Design</a>
+                    <a href="https://anikeolaschools.com" target="_blank" class="card-title">Anikeola Schools Website</a>
                   </h3>
 
-                  <a href="#" class="card-tag">Design</a>
+                  <a href="https://anikeolaschools.com" target="_blank" class="card-tag">Web Development</a>
                 </div>
 
               </div>
@@ -480,16 +456,16 @@
               <div class="project-card">
 
                 <figure class="card-banner img-holder" style="--width: 416; --height: 429;">
-                  <img src="./assets/images/project-3.jpg" width="416" height="429" loading="lazy" alt="3D Digital Art"
+                  <img src="./assets/images/insightnaijatv-com.jpg" width="416" height="429" loading="lazy" alt="Insight Naija TV Website"
                     class="img-cover">
                 </figure>
 
                 <div class="card-content">
                   <h3 class="h3">
-                    <a href="#" class="card-title">3D Digital Art</a>
+                    <a href="https://insightnaijatv.com" target="_blank" class="card-title">Insight Naija TV Website</a>
                   </h3>
 
-                  <a href="#" class="card-tag">Design</a>
+                  <a href="https://insightnaijatv.com" target="_blank" class="card-tag">Web Development</a>
                 </div>
 
               </div>
@@ -499,39 +475,22 @@
               <div class="project-card">
 
                 <figure class="card-banner img-holder" style="--width: 416; --height: 429;">
-                  <img src="./assets/images/project-4.jpg" width="416" height="429" loading="lazy" alt="Web Design"
+                  <img src="./assets/images/lifehousegroton-com.jpg" width="416" height="429" loading="lazy" alt="Life House Groton Website"
                     class="img-cover">
                 </figure>
 
                 <div class="card-content">
                   <h3 class="h3">
-                    <a href="#" class="card-title">Web Design</a>
+                    <a href="https://lifehousegroton.com" target="_blank" class="card-title">Life House Groton Website</a>
                   </h3>
 
-                  <a href="#" class="card-tag">Design</a>
+                  <a href="https://lifehousegroton.com" target="_blank" class="card-tag">Web Development</a>
                 </div>
 
               </div>
             </li>
 
-            <li>
-              <div class="project-card">
-
-                <figure class="card-banner img-holder" style="--width: 416; --height: 429;">
-                  <img src="./assets/images/project-5.jpg" width="416" height="429" loading="lazy"
-                    alt="Mobile App Design" class="img-cover">
-                </figure>
-
-                <div class="card-content">
-                  <h3 class="h3">
-                    <a href="#" class="card-title">Mobile App Design</a>
-                  </h3>
-
-                  <a href="#" class="card-tag">Design</a>
-                </div>
-
-              </div>
-            </li>
+            <!-- Add more projects here -->
 
           </ul>
 
