news letter commit

--- a/index.html
+++ b/index.html
@@ -517,12 +517,12 @@
 
           <div class="newsletter-content">
 
-            <p class="section-subtitle has-before">Get every update</p>
+            <p class="section-subtitle has-before text-center">Stay Updated</p>
 
-            <h2 class="h2 section-title">Subscribe newslater get latest updates and deals</h2>
+            <h2 class="h2 section-title text-center">Subscribe to Our Newsletter for the Latest Updates and Deals</h2>
 
-            <form action="" class="newsletter-form">
-              <input type="email" name="email_address" placeholder="Enter your mail" required class="email-field">
+            <form action="" class="newsletter-form text-center">
+              <input type="email" name="email_address" placeholder="Enter your email" required class="email-field">
 
               <button type="submit" class="btn btn-secondary has-before has-after">
                 <span class="span">Subscribe</span>
@@ -535,6 +535,7 @@
 
         </div>
       </section>
+
 
 
 
