Google sheet integration

--- a/letstalk.html
+++ b/letstalk.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-5EY71Z0GDD"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-5EY71Z0GDD');
-</script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5EY71Z0GDD"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-5EY71Z0GDD');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Mansion - Contact Us</title>
@@ -22,7 +22,8 @@
         <h1>Contact Tech Mansion</h1>
         <p>Let's discuss your website project!</p>
 
-        <form action="danidannyco@gmail.com" method="post"> <div class="form-group">
+        <form action="https://script.google.com/macros/s/AKfycbzTbddbRq4KCtsO8EQlb4-HI2c7Oo44jpRHm9NYGSHXtIxZUao1Z_thz7yhdLzaKGoW6w/exec" method="post"> 
+            <div class="form-group">
                 <label for="name">Your Name:</label>
                 <input type="text" id="name" name="name" required>
             </div>
@@ -42,7 +43,7 @@
 
         <div class="contact-info">
             <h2>Or reach out directly:</h2>
-            <p><a href="danidannyco@gmail.com">danidannyco@gmail.com</a></p>
+            <p><a href="mailto:danidannyco@gmail.com">danidannyco@gmail.com</a></p>
             <p><a href="tel:8608679664">8608679664</a></p>
         </div>
     </section>
