--- a/letstalk.html
+++ b/letstalk.html
@@ -14,6 +14,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Mansion - Contact Us</title>
     <link rel="stylesheet" href="./assets/css/style.css">  
+    <script>
+      function handleSubmit(event) {
+        event.preventDefault();
+        
+        var form = event.target;
+        var formData = new FormData(form);
+        
+        fetch(form.action, {
+          method: 'POST',
+          body: formData
+        })
+        .then(response => {
+          if (response.ok) {
+            alert('Your message has been sent successfully!');
+            window.location.href = 'index.html'; // Redirect to homepage
+          } else {
+            throw new Error('Failed to send message');
+          }
+        })
+        .catch(error => {
+          console.error('Error:', error);
+          alert('Failed to send message. Please try again later.');
+        });
+      }
+    </script>
 </head>
 <body>
 
@@ -22,7 +47,7 @@
         <h1>Contact Tech Mansion</h1>
         <p>Let's discuss your website project!</p>
 
-        <form action="https://script.google.com/macros/s/AKfycbzTbddbRq4KCtsO8EQlb4-HI2c7Oo44jpRHm9NYGSHXtIxZUao1Z_thz7yhdLzaKGoW6w/exec" method="post"> 
+        <form action="https://script.google.com/macros/s/AKfycbzTbddbRq4KCtsO8EQlb4-HI2c7Oo44jpRHm9NYGSHXtIxZUao1Z_thz7yhdLzaKGoW6w/exec" method="post" onsubmit="handleSubmit(event)"> 
             <div class="form-group">
                 <label for="name">Your Name:</label>
                 <input type="text" id="name" name="name" required>
