--- a/letstalk.html
+++ b/letstalk.html
@@ -27,16 +27,29 @@
         })
         .then(response => {
           if (response.ok) {
-            alert('Your message has been sent successfully!');
-            window.location.href = 'index.html'; // Redirect to homepage
+            showResponseMessage('Your message has been sent successfully!');
+            setTimeout(() => {
+              window.location.href = 'index.html'; // Redirect to homepage after 3 seconds
+            }, 3000);
           } else {
             throw new Error('Failed to send message');
           }
         })
         .catch(error => {
           console.error('Error:', error);
-          alert('Failed to send message. Please try again later.');
+          showResponseMessage('Failed to send message. Please try again later.', true);
         });
+      }
+
+      function showResponseMessage(message, isError = false) {
+        var responseContainer = document.getElementById('response-container');
+        responseContainer.textContent = message;
+        if (isError) {
+          responseContainer.style.color = 'red';
+        } else {
+          responseContainer.style.color = 'green';
+        }
+        responseContainer.style.display = 'block';
       }
     </script>
 </head>
@@ -71,6 +84,8 @@
             <p><a href="mailto:danidannyco@gmail.com">danidannyco@gmail.com</a></p>
             <p><a href="tel:8608679664">8608679664</a></p>
         </div>
+
+        <div id="response-container" style="display: none;"></div>
     </section>
 
 </body>
