--- a/index.html
+++ b/index.html
@@ -130,9 +130,12 @@
             <div class="wrapper">
               <a href="./letstalk.html" class="btn btn-primary">Get a Quote</a>
               <button class="hero-btn">
-                <ion-icon name="play-outline" aria-hidden="true"></ion-icon>
-                <span class="span">Watch Portfolio</span>
+                <a href="./calpage.html"></a>
+                  <ion-icon name="play-outline" aria-hidden="true"></ion-icon>
+                  <span class="span">Calculate</span>
+                </a>
               </button>
+              
             </div>
             
 
