--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="wrapper">
               <a href="./letstalk.html" class="btn btn-primary">Get a Quote</a>
               <button class="hero-btn">
-                <a href="./calpage.html"></a>
+                <a href="./calpage.html">
                   <ion-icon name="play-outline" aria-hidden="true"></ion-icon>
                   <span class="span">Calculate</span>
                 </a>
