--- a/calpage.html
+++ b/calpage.html
@@ -27,10 +27,10 @@
                 <div class="form-group">
                     <label for="website-type">Select Website Type:</label>
                     <select name="website-type" id="website-type" required>
-                        <option value="">Select Website Type</option>
-                        <option value="1">Basic Website</option>
-                        <option value="2">Business Website</option>
-                        <option value="3">E-commerce Website</option>
+                        <option value="" disabled selected>Select Website Type</option>
+                        <option value="basic">Basic Website</option>
+                        <option value="business">Business Website</option>
+                        <option value="ecommerce">E-commerce Website</option>
                     </select>
                 </div>
                 <div class="form-group">
