--- a/calpage.html
+++ b/calpage.html
@@ -27,7 +27,7 @@
                 <div class="form-group">
                     <label for="website-type">Select Website Type:</label>
                     <select name="website-type" id="website-type" required>
-                        <option value="" disabled selected>Select Website Type</option>
+                        <option value="">Select Website Type</option>
                         <option value="basic">Basic Website</option>
                         <option value="business">Business Website</option>
                         <option value="ecommerce">E-commerce Website</option>
