--- a/calpage.html
+++ b/calpage.html
@@ -27,7 +27,7 @@
                 <div class="form-group">
                     <label for="website-type">Select Website Type:</label>
                     <select name="website-type" id="website-type" required>
-                        <option value="">Select Website Type</option>
+                        <option value="" disabled selected>Select Website Type</option>
                         <option value="basic">Basic Website</option>
                         <option value="business">Business Website</option>
                         <option value="ecommerce">E-commerce Website</option>
@@ -66,7 +66,7 @@
         </div>
     </footer>
 
-    <script src="./assets/js/calculator.js" defer></script>
+    <script src="./assets/js/script.js" defer></script>
 </body>
 
 </html>
